Remove button line height to fix proper alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,9 +54,6 @@ nav a.sidenav-trigger i {
     width: 100%;
 }
 
-.btn, .btn-large, .btn-small, .btn-flat {
-    line-height: 1.5rem;
-}
 
 h3,
 h5 {
